--- a/vfs.rar/resources/language/resource.language.en_gb/strings.po
+++ b/vfs.rar/resources/language/resource.language.en_gb/strings.po
@@ -24,8 +24,6 @@ msgstr ""
 #When writing a description or setting, refer to a setting name in quotes. See existing entries for guidance.
 #For example, "Press \"OK\" for \"All seasons\"" instead of "Press OK for All seasons" after first word.
 
-# Following strings used for addon settings dialog
-
 msgctxt "#30000"
 msgid "RAR file extract"
 msgstr ""
@@ -40,4 +38,42 @@ msgstr ""
 
 msgctxt "#30003"
 msgid "Enter RAR package password for:\n%s"
+msgstr ""
+
+# Following strings used for addon settings dialog
+
+msgctxt "#30010"
+msgid "General"
+msgstr ""
+
+msgctxt "#30011"
+msgid "Ask for password"
+msgstr ""
+
+msgctxt "#30012"
+msgid "If archives are password protected, prompt for the password to be entered"
+msgstr ""
+
+msgctxt "#30013"
+msgid "Pre-defined password to attempt decompression with"
+msgstr ""
+
+msgctxt "#30014"
+msgid "Stored password 1"
+msgstr ""
+
+msgctxt "#30015"
+msgid "Stored password 2"
+msgstr ""
+
+msgctxt "#30016"
+msgid "Stored password 3"
+msgstr ""
+
+msgctxt "#30017"
+msgid "Stored password 4"
+msgstr ""
+
+msgctxt "#30018"
+msgid "Stored password 5"
 msgstr ""
