--- a/vfs.rar/resources/language/resource.language.de_de/strings.po
+++ b/vfs.rar/resources/language/resource.language.de_de/strings.po
@@ -93,3 +93,15 @@ msgstr "Eine große Datei muss entpackt werden. Fortfahren?"
 msgctxt "#30021"
 msgid "Not enough memory available to decompress file"
 msgstr "Nicht genügend speicher verfügbar um Datei zu entpacken"
+
+msgctxt "#30022"
+msgid "Passwords"
+msgstr "Passwörter"
+
+msgctxt "#30023"
+msgid "Asks to unpack"
+msgstr "Fragt zum entpacken"
+
+msgctxt "#30024"
+msgid "Asks you with a dialog to confirm the unpacking of a larger file."
+msgstr "Fragt Sie mit einem Dialog um das entpacken einer größeren Datei zu bestätigen."
