--- a/vfs.rar/resources/language/resource.language.en_gb/strings.po
+++ b/vfs.rar/resources/language/resource.language.en_gb/strings.po
@@ -93,3 +93,15 @@ msgstr ""
 msgctxt "#30021"
 msgid "Not enough memory available to decompress file"
 msgstr ""
+
+msgctxt "#30022"
+msgid "Passwords"
+msgstr ""
+
+msgctxt "#30023"
+msgid "Asks to unpack"
+msgstr ""
+
+msgctxt "#30024"
+msgid "Asks you with a dialog to confirm the unpacking of a larger file."
+msgstr ""
