--- a/vfs.rar/resources/language/resource.language.sl_si/strings.po
+++ b/vfs.rar/resources/language/resource.language.sl_si/strings.po
@@ -17,6 +17,18 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
 "%100==4 ? 2 : 3;\n"
 
+msgctxt "Addon Summary"
+msgid "Unarchiver for .rar files"
+msgstr ""
+
+msgctxt "Addon Description"
+msgid "This addon is an extraction utility for RAR archives.
+
+It allows direct reading of uncompressed RAR files, so prior unpacking is not necessary. For all other types, it is temporarily unpacked and passed to Kodi.
+
+Attention: A "Solid RAR" archive type requires complete unpacking to use files within it. Hence access times may be long for larger packages."
+msgstr ""
+
 #[Consistency] Make terms, settings names, brands and other minutiae, consistent throughout file.
 #[Capitalization] Avoid capitalizing every second word. See http://grammarist.com/capitalization/
 #For example, prefer wording as "This new string" instead of "This New String".
