--- a/vfs.rar/resources/language/resource.language.fr_fr/strings.po
+++ b/vfs.rar/resources/language/resource.language.fr_fr/strings.po
@@ -5,24 +5,25 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/vfs.rar/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2023-01-15 18:15+0000\n"
+"Last-Translator: skypichat <skypichat@hotmail.fr>\n"
+"Language-Team: French (France) <https://kodi.weblate.cloud/projects/kodi-add-ons-virtual-filesystems/vfs-rar/fr_fr/>\n"
 "Language: fr_fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.15\n"
 
 msgctxt "Addon Summary"
 msgid "Unarchiver for .rar files"
-msgstr ""
+msgstr "Désarchiveur pour les fichiers .rar"
 
 msgctxt "Addon Description"
 msgid "This addon is an extraction utility for RAR archives.[CR][CR]It allows direct reading of uncompressed RAR files, so prior unpacking is not necessary. For all other types, it is temporarily unpacked and passed to Kodi.[CR][CR]Attention: A \"Solid RAR\" archive type requires complete unpacking to use files within it. Hence access times may be long for larger packages."
-msgstr ""
+msgstr "Cet addon est un utilitaire d'extraction d'archives RAR.[CR][CR]Il permet la lecture directe des fichiers RAR non compressés, de sorte qu'un décompactage préalable n'est pas nécessaire. Pour tous les autres types, il est temporairement décompressé et transmis à Kodi.[CR][CR]Attention : Un type d'archive \"Solid RAR\" nécessite une décompression complète pour utiliser les fichiers qu'il contient. Par conséquent, les temps d'accès peuvent être longs pour les packages plus volumineux."
 
 # [Consistency] Make terms, settings names, brands and other minutiae, consistent throughout file.
 # [Capitalization] Avoid capitalizing every second word. See http://grammarist.com/capitalization/
@@ -33,83 +34,85 @@ msgstr ""
 # For example, "Press \"OK\" for \"All seasons\"" instead of "Press OK for All seasons" after first word.
 msgctxt "#30000"
 msgid "RAR file extract"
-msgstr ""
+msgstr "Extrait de fichier RAR"
 
 msgctxt "#30001"
 msgid "RAR file scan"
-msgstr ""
+msgstr "Analyse du fichier RAR"
 
 msgctxt "#30002"
 msgid "RAR solid file scan"
-msgstr ""
+msgstr "Analyse du fichier solide RAR"
 
 msgctxt "#30003"
 msgid ""
 "Enter RAR package password for:\n"
 "%s"
 msgstr ""
+"Entrez le mot de passe du package RAR pour :\n"
+"%s"
 
 msgctxt "#30004"
 msgid "Not enough disk space available"
-msgstr ""
+msgstr "Espace disque disponible insuffisant"
 
 # Following strings used for addon settings dialog
 msgctxt "#30010"
 msgid "General"
-msgstr ""
+msgstr "Général"
 
 msgctxt "#30011"
 msgid "Ask for password"
-msgstr ""
+msgstr "Demander un mot de passe"
 
 msgctxt "#30012"
 msgid "If archives are password protected, prompt for the password to be entered"
-msgstr ""
+msgstr "Si les archives sont protégées par un mot de passe, demander le mot de passe à saisir"
 
 msgctxt "#30013"
 msgid "Pre-defined password to attempt decompression with"
-msgstr ""
+msgstr "Mot de passe prédéfini pour tenter la décompression avec"
 
 msgctxt "#30014"
 msgid "Stored password 1"
-msgstr ""
+msgstr "Mot de passe enregistré 1"
 
 msgctxt "#30015"
 msgid "Stored password 2"
-msgstr ""
+msgstr "Mot de passe enregistré 2"
 
 msgctxt "#30016"
 msgid "Stored password 3"
-msgstr ""
+msgstr "Mot de passe enregistré 3"
 
 msgctxt "#30017"
 msgid "Stored password 4"
-msgstr ""
+msgstr "Mot de passe enregistré 4"
 
 msgctxt "#30018"
 msgid "Stored password 5"
-msgstr ""
+msgstr "Mot de passe enregistré 5"
 
 msgctxt "#30019"
 msgid "Confirm copy"
-msgstr ""
+msgstr "Confirmer la copie"
 
 msgctxt "#30020"
 msgid "Need to unpack a big file. Continue?"
-msgstr ""
+msgstr "Besoin de décompresser un gros fichier. Continuer ?"
 
 msgctxt "#30021"
 msgid "Not enough memory available to decompress file"
-msgstr ""
+msgstr "Mémoire disponible insuffisante pour décompresser le fichier"
 
 msgctxt "#30022"
 msgid "Passwords"
-msgstr ""
+msgstr "Mots de passe"
 
 msgctxt "#30023"
 msgid "Asks to unpack"
-msgstr ""
+msgstr "Demande de décompression"
 
 msgctxt "#30024"
 msgid "Asks you with a dialog to confirm the unpacking of a larger file."
-msgstr ""
+msgstr "Vous demande avec une boîte de dialogue de confirmer la décompression d'un fichier plus volumineux."
